# payrollops-ai

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  schemas.py  security.py  seed.py
backend/app/services/: ai.py  embeddings.py  graph.py  retrieval.py  validation.py  workflow.py
backend/tests/: conftest.py  test_ai_providers.py  test_api.py  test_validation.py
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/audit/: page.tsx
frontend/app/exceptions/: page.tsx
frontend/app/login/: page.tsx
frontend/app/policies/: page.tsx
frontend/app/runs/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: AppShell.tsx  AuthProvider.tsx  Badges.tsx  CaseDrawer.tsx
frontend/lib/: api.ts  types.ts
frontend/public/: sample-payroll.csv
sample-data/: payroll-demo.csv
